objects/AdminAccessRequest__c.object
<CustomObject>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AdminAccessRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AdminAccessRequest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AAR-{00000}</displayFormat>
        <label>AdminAcessRequest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AdminAccessRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>